feat: tests for the new controller and mapper
