# api/review-service-api/src/main/resources/openapi-v2.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: Review Service API
-  version: 1.0.0
+  version: 2.0.0
   description: Description of the API...
   license:
     name: Copyright Backbase
@@ -15,7 +15,7 @@ servers:
 tags:
   - name: review-service
 paths:
-  /service-api/v1/products/{productId}/reviews:
+  /service-api/v2/products/{productId}/reviews:
     get:
       tags:
         - review-service
@@ -38,7 +38,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ReviewList'
               example:
-                $ref: examples/review-list.json
+                $ref: v2/examples/review-list.json
         '400':
           description: If one or more request parameters don't comply with the specification
           content:
@@ -46,7 +46,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/BadRequestError'
               example:
-                $ref: lib/examples/bad-request-validation-error.json
+                $ref: v2/lib/examples/bad-request-validation-error.json
         '401':
           description: If the authentication credentials provided are invalid
           content:
@@ -54,7 +54,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/UnauthorizedError'
               example:
-                $ref: lib/examples/unauthorized-error.json
+                $ref: v2/lib/examples/unauthorized-error.json
         '500':
           description: If a runtime error occurs while processing the request
           content:
@@ -62,7 +62,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
               example:
-                $ref: lib/examples/internal-server-error.json
+                $ref: v2/lib/examples/internal-server-error.json
     delete:
       tags:
         - review-service
@@ -87,7 +87,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/BadRequestError'
               example:
-                $ref: lib/examples/bad-request-validation-error.json
+                $ref: v2/lib/examples/bad-request-validation-error.json
         '401':
           description: If the authentication credentials provided are invalid
           content:
@@ -95,7 +95,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/UnauthorizedError'
               example:
-                $ref: lib/examples/unauthorized-error.json
+                $ref: v2/lib/examples/unauthorized-error.json
         '403':
           description: If the current user doesn't have authorization to delete the reviews
           content:
@@ -103,7 +103,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ForbiddenError'
               example:
-                $ref: lib/examples/forbidden-error.json
+                $ref: v2/lib/examples/forbidden-error.json
         '500':
           description: If a runtime error occurs while processing the request
           content:
@@ -111,8 +111,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
               example:
-                $ref: lib/examples/internal-server-error.json
-  /service-api/v1/reviews:
+                $ref: v2/lib/examples/internal-server-error.json
+  /service-api/v2/reviews:
     post:
       tags:
         - review-service
@@ -125,7 +125,7 @@ paths:
             schema:
               $ref: '#/components/schemas/Review'
             example:
-              $ref: examples/create-review-request.json
+              $ref: v2/examples/create-review-request.json
       responses:
         '204':
           description: If the review has been created successfully
@@ -134,7 +134,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ReviewId'
               example:
-                $ref: examples/review-id.json
+                $ref: v2/examples/review-id.json
         '400':
           description: If one or more request parameters don't comply with the specification
           content:
@@ -142,7 +142,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/BadRequestError'
               example:
-                $ref: lib/examples/bad-request-validation-error.json
+                $ref: v2/lib/examples/bad-request-validation-error.json
         '401':
           description: If the authentication credentials provided are invalid
           content:
@@ -150,7 +150,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/UnauthorizedError'
               example:
-                $ref: lib/examples/unauthorized-error.json
+                $ref: v2/lib/examples/unauthorized-error.json
         '403':
           description: If the current user doesn't have authorization to create reviews
           content:
@@ -158,7 +158,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ForbiddenError'
               example:
-                $ref: lib/examples/forbidden-error.json
+                $ref: v2/lib/examples/forbidden-error.json
         '500':
           description: If a runtime error occurs while processing the request
           content:
@@ -166,7 +166,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
               example:
-                $ref: lib/examples/internal-server-error.json
+                $ref: v2/lib/examples/internal-server-error.json
     put:
       tags:
         - review-service
@@ -179,7 +179,7 @@ paths:
             schema:
               $ref: '#/components/schemas/Review'
             example:
-              $ref: examples/update-review-request.json
+              $ref: v2/examples/update-review-request.json
       responses:
         '204':
           description: If the review has been updated successfully
@@ -188,7 +188,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ReviewId'
               example:
-                $ref: examples/review-id.json
+                $ref: v2/examples/review-id.json
         '400':
           description: If one or more request parameters don't comply with the specification
           content:
@@ -196,7 +196,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/BadRequestError'
               example:
-                $ref: lib/examples/bad-request-validation-error.json
+                $ref: v2/lib/examples/bad-request-validation-error.json
         '401':
           description: If the authentication credentials provided are invalid
           content:
@@ -204,7 +204,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/UnauthorizedError'
               example:
-                $ref: lib/examples/unauthorized-error.json
+                $ref: v2/lib/examples/unauthorized-error.json
         '403':
           description: If the current user doesn't have authorization to update reviews
           content:
@@ -212,7 +212,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ForbiddenError'
               example:
-                $ref: lib/examples/forbidden-error.json
+                $ref: v2/lib/examples/forbidden-error.json
         '500':
           description: If a runtime error occurs while processing the request
           content:
@@ -220,8 +220,70 @@ paths:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
               example:
-                $ref: lib/examples/internal-server-error.json
-  /service-api/v1/reviews/{reviewId}:
+                $ref: v2/lib/examples/internal-server-error.json
+  /service-api/v2/reviews/{reviewId}:
+    put:
+      tags:
+        - review-service
+      summary: Update a review
+      description: Updates an existing review
+      operationId: putReviewById
+      parameters:
+        - name: reviewId
+          in: path
+          description: reviewId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Review'
+            example:
+              $ref: v2/examples/update-review-request.json
+      responses:
+        '204':
+          description: If the review has been updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReviewId'
+              example:
+                $ref: v2/examples/review-id.json
+        '400':
+          description: If one or more request parameters don't comply with the specification
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestError'
+              example:
+                $ref: v2/lib/examples/bad-request-validation-error.json
+        '401':
+          description: If the authentication credentials provided are invalid
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnauthorizedError'
+              example:
+                $ref: v2/lib/examples/unauthorized-error.json
+        '403':
+          description: If the current user doesn't have authorization to update reviews
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ForbiddenError'
+              example:
+                $ref: v2/lib/examples/forbidden-error.json
+        '500':
+          description: If a runtime error occurs while processing the request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+              example:
+                $ref: v2/lib/examples/internal-server-error.json
     get:
       tags:
         - review-service
@@ -244,7 +306,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Review'
               example:
-                $ref: examples/get-review-response.json
+                $ref: v2/examples/get-review-response.json
         '400':
           description: If one or more request parameters don't comply with the specification
           content:
@@ -252,7 +314,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/BadRequestError'
               example:
-                $ref: lib/examples/bad-request-validation-error.json
+                $ref: v2/lib/examples/bad-request-validation-error.json
         '401':
           description: If the authentication credentials provided are invalid
           content:
@@ -260,7 +322,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/UnauthorizedError'
               example:
-                $ref: lib/examples/unauthorized-error.json
+                $ref: v2/lib/examples/unauthorized-error.json
         '403':
           description: If the current user doesn't have authorization to view the review
           content:
@@ -268,7 +330,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ForbiddenError'
               example:
-                $ref: lib/examples/forbidden-error.json
+                $ref: v2/lib/examples/forbidden-error.json
         '404':
           description: If the review cannot be found
           content:
@@ -276,7 +338,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/NotFoundError'
               example:
-                $ref: lib/examples/not-found-error.json
+                $ref: v2/lib/examples/not-found-error.json
         '500':
           description: If a runtime error occurs while processing the request
           content:
@@ -284,7 +346,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
               example:
-                $ref: lib/examples/internal-server-error.json
+                $ref: v2/lib/examples/internal-server-error.json
     delete:
       tags:
         - review-service
@@ -309,7 +371,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/BadRequestError'
               example:
-                $ref: lib/examples/bad-request-validation-error.json
+                $ref: v2/lib/examples/bad-request-validation-error.json
         '401':
           description: If the authentication credentials provided are invalid
           content:
@@ -317,7 +379,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/UnauthorizedError'
               example:
-                $ref: lib/examples/unauthorized-error.json
+                $ref: v2/lib/examples/unauthorized-error.json
         '403':
           description: If the current user doesn't have authorization to delete reviews
           content:
@@ -325,7 +387,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ForbiddenError'
               example:
-                $ref: lib/examples/forbidden-error.json
+                $ref: v2/lib/examples/forbidden-error.json
         '500':
           description: If a runtime error occurs while processing the request
           content:
@@ -333,15 +395,15 @@ paths:
               schema:
                 $ref: '#/components/schemas/InternalServerError'
               example:
-                $ref: lib/examples/internal-server-error.json
+                $ref: v2/lib/examples/internal-server-error.json
 components:
   schemas:
     Review:
-      $ref: schemas/review.yaml
+      $ref: v2/schemas/review.yaml
     ReviewList:
-      $ref: schemas/review-list.yaml
+      $ref: v2/schemas/review-list.yaml
     ReviewId:
-      $ref: schemas/review-id.yaml
+      $ref: v2/schemas/review-id.yaml
     BadRequestError:
       $ref: 'lib/schemas/bad-request-error.yaml'
     ConflictError:
