# services/review/src/main/java/com/backbase/goldensample/review/v2/api/ReviewServiceApiController.java
@@ -1,11 +1,11 @@
-package com.backbase.goldensample.review.api;
+package com.backbase.goldensample.review.v2.api;
 
-import com.backbase.goldensample.review.mapper.ReviewMapper;
 import com.backbase.goldensample.review.persistence.ReviewEntity;
 import com.backbase.goldensample.review.service.ReviewService;
-import com.backbase.reviews.api.service.v1.ReviewServiceApi;
-import com.backbase.reviews.api.service.v1.model.Review;
-import com.backbase.reviews.api.service.v1.model.ReviewId;
+import com.backbase.goldensample.review.v2.mapper.ReviewMapperV2;
+import com.backbase.reviews.api.service.v2.ReviewServiceApi;
+import com.backbase.reviews.api.service.v2.model.Review;
+import com.backbase.reviews.api.service.v2.model.ReviewId;
 import java.util.List;
 import javax.validation.Valid;
 import lombok.extern.log4j.Log4j2;
@@ -18,25 +18,20 @@ import org.springframework.web.bind.annotation.RestController;
  * definition.
  *
  * @see ReviewServiceApi
- *
- * @deprecated Will be removed next major released. Use {@link ReviewServiceApiController} instead.
  */
-
-@Deprecated
-@RestController
+@RestController("reviewServiceApiControllerV2")
 @Log4j2
 public class ReviewServiceApiController implements ReviewServiceApi {
 
   /** Review service business logic interface. */
   private final ReviewService reviewService;
-  private final ReviewMapper mapper;
+  private final ReviewMapperV2 mapper;
 
   @Autowired
-  public ReviewServiceApiController(ReviewService reviewService, ReviewMapper mapper) {
+  public ReviewServiceApiController(ReviewService reviewService, ReviewMapperV2 mapper) {
     this.reviewService = reviewService;
     this.mapper = mapper;
   }
-
 
   @Override
   public ResponseEntity<Void> deleteReview(Long reviewId) {
@@ -81,6 +76,15 @@ public class ReviewServiceApiController implements ReviewServiceApi {
 
   @Override
   public ResponseEntity<ReviewId> putReview(@Valid Review review) {
+    log.debug("updating review {}", review);
+    ReviewEntity entity = mapper.apiToEntity(review);
+    ReviewEntity reviewWithId = reviewService.updateReview(entity);
+    log.debug("review with id {} updated", reviewWithId.getProductId());
+    return ResponseEntity.noContent().build();
+  }
+
+  @Override
+  public ResponseEntity<ReviewId> putReviewById(Long reviewId, @Valid Review review) {
     log.debug("updating review {}", review);
     ReviewEntity entity = mapper.apiToEntity(review);
     ReviewEntity reviewWithId = reviewService.updateReview(entity);
